[project]
name = "mas-ped"
version = "0.1.0"
description = "Multi-agent pedestrian simulation using Mesa and OSMnx"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # 可視化・分析
    "matplotlib>=3.10.7",
    "altair>=6.0.0",
    # エージェントベース
    "mesa>=3.3.1",
    # グラフ
    "networkx>=3.6",
    # 地図・道路ネットワーク
    "osmnx>=1.9.4",
    # 地理系（明示）
    "geopandas>=1.0.0",
    "shapely>=2.0.3",
    "pyproj>=3.7.0",
    # 補助
    "pyyaml>=6.0.3",
    "pymupdf>=1.26.7",
    "solara>=1.55.0",
    "contextily>=1.7.0",
    "pyside6>=6.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "mas-ped",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mas_ped"]
